--- a/setup.cfg
+++ b/setup.cfg
@@ -27,4 +27,4 @@ install_requires =
     protobuf>=3.20,<4
     attrs>=23.0.0 
     dag-cbor==0.3.2 
-    py-hamt-sharding @ git+https://github.com/kralverde/py-hamt-sharding@f748cea5dfa1417ea1cfc1e360c586bd34c9e70d
+    hamt-sharding>=0.1.3
