--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = py_unix_fs_exporter
+name = unix_fs_exporter
 author = kralverde
 description = Python implementation of a ipfs unix fs exporter.
 long_description = file: README.rst
@@ -10,6 +10,7 @@ project_urls =
 # see https://pypi.org/classifiers/
 classifiers =
     Development Status :: 3 - Alpha
+    Programming Language :: Python :: 3.11
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.8
@@ -28,3 +29,9 @@ install_requires =
     attrs>=23.0.0 
     dag-cbor==0.3.2 
     hamt-sharding>=0.1.3
+
+[options.package_data]
+* = py.typed
+
+[options.packages.find]
+exclude = tests
