--- a/setup.cfg
+++ b/setup.cfg
@@ -23,11 +23,11 @@ classifiers =
 packages = find:
 python_requires = >=3.7
 install_requires =
-    multiformats==0.2.1
-    mmh3==4.0.1
+    multiformats>=0.2.1
+    mmh3>=4.0.1
     protobuf>=3.20,<4
     attrs>=23.0.0 
-    dag-cbor==0.3.2 
+    dag-cbor>=0.3.2 
     hamt-sharding>=0.1.3
 
 [options.package_data]
